More readable color for table headers in admin pages

--- a/src/wiki/html/css/site.css
+++ b/src/wiki/html/css/site.css
@@ -226,4 +226,8 @@ table.admin td {
 
 table.admin th {
   background-color: #111111;
+  color: #e9e9ff;
+  padding-left:3px;
+  padding-right:3px;
+  font-weight:bold;
 }
