Handlers for page not found and access denied.

--- a/src/wiki/templates/wiki-welcome.html
+++ b/src/wiki/templates/wiki-welcome.html
@@ -1,4 +1,13 @@
 <h2>Welcome to the Felix Wiki</h2>
+
+
+<h3>Administrative Access</h3>
+Administrative access is required to edit wiki pages as well as
+perform other administrative tasks. The default administrative user
+is <b>felix</b> the default password is <b>felix</b>. Please rember to
+change the default password.
+
+<h3>Getting Wiki Content</h3>
 The felix wiki is backed by a Git repository on github.com.
 You have the following options for accessing the wiki content.<br/>
 
@@ -19,7 +28,7 @@ To commit changes in the wiki to the wiki repository this method
       Setup</a> documents at Github.com.
 <dd/>
 
-<dt><input type='radio' name='get-option' value='https'/>
+<dt><input type='radio' name='get-option' checked='checked' value='https'/>
 HTTPS</dt><dd> HTTPS access requires port 443 is open on your firewall an git is installed on your computer<br/>
 This method is does not allow content to be posted to the wiki repository.<br/>
 This method will allow you to view the latest wiki content.</br/>
